--- a/app.json
+++ b/app.json
@@ -1,30 +1,49 @@
 {
   "expo": {
-    "name": "5",
-    "slug": "5",
+    "name": "Expenses",
+    "slug": "5-expenses-rn",
+    "privacy": "public",
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/rn-icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/rn-splash.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#242832"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/071528cd-cb89-4a9c-8a2e-5027e670d119"
     },
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.khobotovdev.expenses-rn-app",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "com.khobotovdev.expenses_rn_app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "extra": {
+      "eas": {
+        "projectId": "071528cd-cb89-4a9c-8a2e-5027e670d119"
+      }
+    },
+    "owner": "dinich",
+    "runtimeVersion": {
+      "policy": "appVersion"
     }
   }
 }
