--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.1"
+    "react-native-vector-icons": "^10.0.1",
+    "expo-dev-client": "~2.4.12",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
